hammer and switch knife

--- a/src/main/resources/assets/cc/lang/en_us.json
+++ b/src/main/resources/assets/cc/lang/en_us.json
@@ -2,7 +2,9 @@
   "item.cc.hatchet": "Hatchet",
   "item.cc.wrapped_baseball_bat": "Wrapped Baseball Bat",
   "item.cc.broken_baseball_bat": "Broken Baseball Bat",
+  "item.cc.switch_knife": "Switch Knife",
   "item.cc.cleaver": "Cleaver",
+  "item.cc.claw_hammer": "Claw Hammer",
   "item.cc.baseball_bat": "Baseball Bat",
   "item.cc.hand_saw": "Hand Saw"
 }
